<resources>

    <string name="app_name">Driving Buddy</string>
    <string name="heading_left">D R I V I N G</string>
    <string name="heading_right">B U D D Y</string>

    <string name="home_title">Home</string>
    <string name="insights_title">Insights</string>
    <string name="goals_title">Goals</string>
    <string name="settings_title">Settings</string>

    <string name="stats_title">Statistics</string>
    <string name="long_term_title">Long Term Insight Summary</string>
    <string name="home_goal_title">Goal Summary</string>
    <string name="zero_goals">No goals yet! Create a goal on the Goals Page </string>

    <string-array name="goal_options">
        <item>Better lane changes</item>
        <item>No hard brakes</item>
        <item>No sharp turning</item>
        <item>Consistent Speeds</item>
    </string-array>
    <string name="goal_card">Goal Title</string>

    <string name="profile_title">Profile Information</string>

    <string name="privacy_title">Data Collection/Privacy</string>
    <string name="how_we_detect">How We Detect Driving Events</string>
    <string name="back_arrow">Back</string>
    <string name="menu">Menu</string>

    <string name="notifs_title">Notifications</string>
    <string name="perms_title">Terms and Conditions</string>
    <string name="logout">Logout</string>

    <string name="car_details_title">Car Details</string>
    <string name="car_make">Make</string>
    <string name="car_model">Model</string>
    <string name="car_color">Color</string>
    <string name="save_car_details">Save Car Details</string>
    <string name="car_details_saved">Car details saved</string>
    <string name="car_details_menu">Car Details</string>
    <string name="car_section_title">Your Car</string>
    <string name="car_prompt">Add your car details in Settings to see your 3D model.</string>

    <string-array name="car_make_options">
        <item>Honda</item>
        <item>Toyota</item>
        <item>Mini</item>
        <item>Generic</item>
    </string-array>

    <string-array name="car_model_options">
        <item>Civic</item>
        <item>Corolla Cross</item>
        <item>Cooper</item>
        <item>SUV</item>
        <item>Sedan</item>
    </string-array>

    <string-array name="car_color_options">
        <item>Blue</item>
        <item>White</item>
        <item>Grey</item>
        <item>Black</item>
    </string-array>

</resources>
